# C-Exercises

./: CMakeLists.txt  Test.txt
Funcoes/: ex1  ex1.c  ex10  ex10.c  ex11  ex11.c  ex12  ex12.c  ex13  ex13.c  ex14  ex14.c  ex15  ex15.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c  ex6  ex6.c  ex7  ex7.c  ex8  ex8.c  ex9  ex9.c
Funcoes/PassagemPorReferencia/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c  ex6  ex6.c  ex7  ex7.c
Ponteiros/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c  ex6  ex6.c
