cmake_minimum_required(VERSION 4.0)
project(C_exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(C_exercises
        Funcoes/ex1.c
        Funcoes/ex2.c
        Funcoes/ex3.c
        Funcoes/ex4.c
        Funcoes/ex5.c
        Funcoes/ex6.c
        Funcoes/ex7.c
        Funcoes/ex8.c
        Funcoes/ex9.c
        Funcoes/ex10.c
        Funcoes/ex11.c
        Funcoes/ex12.c
        Funcoes/ex13.c
        Funcoes/ex14.c
        Funcoes/ex15.c
        Funcoes/PassagemPorReferencia/ex1.c
        Funcoes/PassagemPorReferencia/ex2.c
        Funcoes/PassagemPorReferencia/ex3.c
        Funcoes/PassagemPorReferencia/ex4.c
        Funcoes/PassagemPorReferencia/ex5.c
        Funcoes/PassagemPorReferencia/ex6.c
        Funcoes/PassagemPorReferencia/ex7.c
        Ponteiros/ex1.c
        Ponteiros/ex2.c
        Ponteiros/ex3.c
        Ponteiros/ex4.c
        Ponteiros/ex5.c
        Ponteiros/ex6.c
)
